fixed z-index

--- a/css/library.css
+++ b/css/library.css
@@ -4,8 +4,10 @@
     --tertiary-color: #3A506B;
     --quaternary-color: #140152;
     font-family: Inter, sans-serif;
-    font-feature-settings: 'liga' 1, 'calt' 1;
+    font-feature-settings: normal;
+    font-variation-settings: 'wght' 450;
     user-select: none;
+    /* position: relative; */
 }
 
 @supports (font-variation-settings: normal) {
@@ -38,7 +40,7 @@ body {
     top: 0;
     left: 0;
     bottom: 0;
-    z-index: 999;
+    z-index: 1;
 }
 
 .sidebar:hover {
@@ -73,7 +75,7 @@ body {
     padding: 6px;
     border-radius: 5px;
     white-space: nowrap;
-    z-index: 1;
+    z-index: 2;
     transition: display 0.8s ease;
 }
 
@@ -126,6 +128,7 @@ body {
     margin-bottom: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     flex-grow: 1;
+    z-index: 3;
 }
 
 .card h1 {
@@ -150,7 +153,7 @@ body {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    z-index: 1000;
+    z-index: 4;
     width: 60%;
     max-width: 600px;
     cursor: help;
@@ -193,7 +196,7 @@ body {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(15px);
-    z-index: 999;
+    z-index: 5;
     cursor: crosshair;
     color: white;
 }
@@ -216,7 +219,7 @@ body {
     top: 0;
     left: 0;
     right: 0;
-    z-index: 9999;
+    z-index: 14;
 }
 
 #titlebar-controls {
@@ -318,7 +321,7 @@ body {
     padding: 20px;
     transition: all 0.1s ease;
     position: relative;
-    z-index: 1999;
+    z-index: 7;
     overflow: hidden;
 }
 
@@ -343,7 +346,7 @@ body {
     height: 100%;
     background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
     transition: background 0.3s ease;
-    z-index: -1;
+    z-index: 9;
     pointer-events: none;
 }
 
@@ -424,7 +427,7 @@ body {
     border: 2px solid var(--quaternary-color);
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    z-index: 6000;
+    z-index: 10;
     animation: fadeIn 0.3s cubic-bezier(0, 0.82, 0.64, 1.21) forwards;
 }
 
@@ -473,7 +476,7 @@ body {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    z-index: 2000;
+    z-index: 13;
     width: 60%;
     max-width: 600px;
     cursor: help;
@@ -500,7 +503,7 @@ body {
     color: white;
     background-color: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(10px);
-    z-index: 6479;
+    z-index: 13;
     transition: opacity 0.3s ease;
 }
 
@@ -571,7 +574,7 @@ body {
     color: white;
     background-color: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(10px);
-    z-index: 2000;
+    z-index: 13;
     transition: opacity 0.3s ease;
 }
 
@@ -607,7 +610,7 @@ body {
     align-items: center;
     justify-content: space-between;
     border-radius: 5px;
-    z-index: 1999;
+    z-index: 12;
     transition: box-shadow 0.2s ease, border-radius 0.2s ease, transform 0.5s ease;
 }
 
@@ -662,7 +665,7 @@ body {
     border-radius: 50%;
     cursor: pointer;
     transition: transform 0.2s ease;
-    z-index: 1;
+    z-index: 15;
 }
 
 #progress-ball:hover,
@@ -730,52 +733,36 @@ body {
     top: 6.5%;
     left: 50%;
     color: #fff;
-    /* Textfarbe */
     transform: translate(-50%, -50%);
-    z-index: 8895;
+    z-index: 6;
 }
 
 .search-bar {
+    position: relative;
     width: 200px;
-    /* Breite der Suchleiste nach Bedarf ändern */
     padding: 10px;
     border-radius: 15px;
-    border: 1px solid var(--quaternary-color);
+    border: 2px solid var(--quaternary-color);
     background-color: var(--secondary-color);
-    /* Hintergrundfarbe der Suchleiste */
     outline: none;
     font-size: 16px;
     color: #fff;
-    /* Textfarbe */
-}
-
-.search-icon {
-    position: absolute;
-    top: 50%;
-    right: 10px;
-    transform: translateY(-50%);
-    color: #fff;
-    /* Farbe des Suchsymbols */
-    cursor: pointer;
-}
-
-.search-icon:hover {
-    color: var(--quaternary-color);
+    z-index: 16;
 }
 
 .autocomplete-dropdown {
     position: absolute;
-    top: calc(100% + 10px);
-    left: 0;
+    top: calc(100% + 50px);
+    left: 50%;
+    transform: translateX(-50%);
     width: 100%;
     max-height: 150px;
     overflow-y: auto;
     background-color: var(--secondary-color);
-    border: 1px solid var(--quaternary-color);
+    border: 2px solid var(--quaternary-color);
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    border-radius: 15px;
-    z-index: 9999;
+    z-index: auto
 }
 
 .autocomplete-option {
@@ -783,6 +770,7 @@ body {
     border-radius: 15px;
     cursor: pointer;
     transition: background-color 0.1s;
+    z-index: -1;
 }
 
 .autocomplete-option:hover {
@@ -792,7 +780,7 @@ body {
 
 .no-results-message {
     padding: 10px;
-    color:var(--primary-color);
+    color: var(--primary-color);
 }
 
 @keyframes blink {
